# werd

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  setup.py
docs/: architecture.md  setup.md  workflow.md
requirements/: dev.txt  main.txt
tests/: __init__.py  test_content_tracker.py  test_init.py  test_render.py  test_translate.py  test_werd.py
tests/_translations/: strings.json
tests/_translations/de/: about_us.md
tests/_translations/de/_layout/: footer.md
tests/_translations/de/blog/: 2023-12-08_The_day_I_rocked_the_world.md
tests/_translations/de/pages/: a-team.md
tests/_translations/en/: about_us.md
tests/_translations/en/_layout/: footer.md
tests/_translations/en/pages/: a-team.md
tests/_translations/jp/: about_us.md
tests/_translations/jp/_layout/: footer.md
tests/_translations/jp/blog/: 2023-12-08_The_day_I_rocked_the_world.md
tests/_translations/jp/pages/: a-team.md
tests/content/_layout/: footer.md
tests/content/blog/: 2023-12-08_The_day_I_rocked_the_world.md
tests/content/blog/2023-01-01/: today_we_begin.md
tests/theme/: index.j2  landing.j2
tests/theme/blog/: index.j2
tests/themes/default/: base.j2
tests/themes/default/pages/: index.j2
werd/: __init__.py  cli.py  config.py  content_tracker.py  content_tree.py  data.py  init.py  langs.json  render.py  strings_map.py  translate.py
werd/templates/: config.yaml
